Fixed issue where long text without spaces would break the design for feedback items

--- a/f1_info_frontend/src/app/development/feedback/feedback-item/feedback-item.component.scss
+++ b/f1_info_frontend/src/app/development/feedback/feedback-item/feedback-item.component.scss
@@ -7,6 +7,7 @@
   h3 {
     font-size: 1.1rem;
     font-weight: 500;
+    word-break: break-all;
   }
 
   &__delete {
