--- a/f1_info_frontend/src/app/development/feedback/feedback.component.scss
+++ b/f1_info_frontend/src/app/development/feedback/feedback.component.scss
@@ -35,12 +35,12 @@
   display: grid;
   gap: 1.25rem;
   align-items: flex-start;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
 
   @media(max-width: 800px) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
   }
   @media(max-width: 600px) {
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
   }
 }
